--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,35 @@ Table of Content:
   padding: 0px;
 }
 
+ul.timeline {
+    list-style-type: none;
+    position: relative;
+}
+ul.timeline:before {
+    content: ' ';
+    background: #d4d9df;
+    display: inline-block;
+    position: absolute;
+    left: 29px;
+    width: 2px;
+    height: 100%;
+}
+ul.timeline > li {
+    margin: 20px 0;
+    padding-left: 20px;
+}
+ul.timeline > li:before {
+    content: ' ';
+    background: white;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #a7cb00;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+}
+
 a {
   text-decoration: none;
   -webkit-transition: all 0.3s ease-in-out;
